# hackiaton_agent_ai_3.0_backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  _diag_batch.py  _diag_locks.py  alembic.ini  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_proveedor_nombre.py  0003_add_conversations.py  0004_claim_import_workspace.py  0004_siniestro_coords.py  0005_message_chart_payload.py  0006_asegurado_nombre.py  0007_claim_reviews_names.py  0007_road_coords.py  0008_claim_reviews_names.py  0009_message_transparency_metadata.py  0010_conversation_entity_focus.py  0011_perf_indexes.py  0012_audit_events.py  0013_siniestro_signals.py  0014_siniestro_resumen_editado.py  0015_claim_score_narrative_analysis.py  0016_claim_score_panel_analysis.py  0017_rule_overrides.py  0021_evento_fields.py  0022_rule_overrides.py  20260527_1013_merge_workspace_coords_heads.py
app/: cli.py  main.py
app/api/: cache_control.py  deps.py
app/core/: city_coords.py  config.py  ecuador_road_segments.py  lifespan_state.py  logging.py  sqlalchemy_pool_cancel_filter.py
app/domain/: ramos.py
app/prompts/: chat_system.v1.md
app/repositories/: __init__.py  asegurados_repo.py  claim_reviews_repo.py  claims_repo.py  conversations_repo.py  documentos_repo.py  messages_repo.py  polizas_repo.py  proveedores_repo.py
app/schemas/: __init__.py  agent.py  asegurados.py  audit.py  auth.py  claim.py  conversation.py  documents.py  imports.py  insights.py  narrative_analysis.py  network.py  page.py  reports.py  reviews.py  risk.py  rule_changes.py  rules.py  rules_config.py  speech.py  status.py
app/use_cases/: _chart_from_tools.py  _claim_report_analysis.py  _document_from_tools.py  _rescore_one.py  _signal_map.py  analyze_claim_narrative.py  analyze_claim_narrative_persisted.py  asegurado_to_out.py  ask_agent.py  assess_confidence.py  claim_score_persist.py  compute_insights.py  (+38 more)
data/: README.md
docker/: .dockerignore  Dockerfile
docs/: arquitectura.md  dataset.md  limitaciones.md  modelo_datos.md  reglas_negocio.md  uso_ia.md
notebooks/: 01_exploracion_datos.ipynb  02_modelo_fraude.ipynb  03_evaluacion_modelo.ipynb
scripts/: generate_dataset.py  generate_demo_case_docs.py  generate_sample_claim_pdfs.py  generate_samples.py  generate_unstructured_samples.py  generate_xlsx_samples.py  import_evento_dataset.py  import_frontend_demo_claims.py  smoke_import.py
tests/: conftest.py  test_city_coords.py  test_claims_detail_ml.py  test_health.py  test_savings_endpoint.py  test_status_endpoint.py
(+606 files in other folders)
