[project]
name = "hackiaton-agent-ai-3-0-backend"
version = "0.1.0"
description = "Hackiaton 3.0 Agent AI - FastAPI + LangGraph backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "faker>=40.19.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "shap>=0.51.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
app = "app.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101", # use of assert (fine in tests)
    "B008", # function call in default arg (fine for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"tests/fixtures/**" = ["S101", "S106", "E501"]  # Spanish strings + builder calls run long
"alembic/env.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "langgraph.*", "langchain_core.*", "langchain_openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires a live Postgres + pgvector (skipped in CI)",
]
